manifests/env/phobos/paddock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy.router.openshift.io/timeout: 120s
  name: b4mad-racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
    - host: paddock.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
  tls:
    - hosts:
        - b4mad.racing
        - paddock.b4mad.racing
      secretName: https-cert-b4mad.racing
